--- a/app/src/main/res/drawable/button_bg_top.xml
+++ b/app/src/main/res/drawable/button_bg_top.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <solid android:color="@color/app_banner_Color" />
+    <solid android:color="@color/transparent_orange" />
     <corners
-        android:bottomLeftRadius="30dp"
-        android:topLeftRadius="30dp" />
+        android:bottomLeftRadius="5dp"
+        android:topLeftRadius="5dp" />
     <padding
         android:left="10dp"
         android:top="5dp"
