--- a/app/src/main/res/layout/home_item.xml
+++ b/app/src/main/res/layout/home_item.xml
@@ -1,15 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="10dp"
-    app:cardCornerRadius="30dp">
+    android:layout_marginLeft="10dp"
+    android:layout_marginTop="15dp"
+    android:layout_marginRight="10dp"
+    app:cardCornerRadius="10dp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content">
 
         <TextView
             android:id="@+id/home_item_date"
@@ -78,7 +79,7 @@
                     android:singleLine="true"
                     android:text="customer"
                     android:textColor="#000000"
-                    android:textSize="32sp" />
+                    android:textSize="24sp" />
 
                 <TextView
                     android:id="@+id/home_item_phone_tv"
@@ -95,7 +96,7 @@
         <ImageView
             android:id="@+id/ic_more_menu"
             android:layout_width="40dp"
-            android:layout_height="40dp"
+            android:layout_height="0dp"
             android:layout_marginEnd="8dp"
             android:layout_marginRight="8dp"
             android:src="@drawable/ic_menu"
