Thêm snackbar thông báo

--- a/app/src/main/res/layout/fragment_edit_history.xml
+++ b/app/src/main/res/layout/fragment_edit_history.xml
@@ -186,6 +186,7 @@
                 android:layout_marginTop="8dp"
                 android:background="@drawable/edit_text_bg_white_half"
                 android:inputType="number"
+                android:textColor="@color/textViewBG_red"
                 android:textSize="24sp"
                 app:layout_constraintEnd_toStartOf="@+id/textView_tongbaolua_extra"
                 app:layout_constraintStart_toStartOf="parent"
@@ -229,6 +230,7 @@
                 android:layout_marginTop="8dp"
                 android:background="@drawable/edit_text_bg_white_half"
                 android:inputType="number"
+                android:textColor="@color/textViewBG_red"
                 android:textSize="24sp"
                 app:layout_constraintEnd_toStartOf="@+id/textView_tongkylua_extra"
                 app:layout_constraintStart_toStartOf="parent"
@@ -272,6 +274,7 @@
                 android:layout_marginTop="8dp"
                 android:background="@drawable/edit_text_bg_white_half"
                 android:inputType="number"
+                android:textColor="@color/textViewBG_red"
                 android:textSize="24sp"
                 app:layout_constraintEnd_toStartOf="@+id/textView_thanhtien_extra"
                 app:layout_constraintStart_toStartOf="parent"
