--- a/app/src/main/res/menu/nav_drawer_menu.xml
+++ b/app/src/main/res/menu/nav_drawer_menu.xml
@@ -9,6 +9,10 @@
             android:icon="@drawable/test_ic"
             android:title="@string/menu_home" />
         <item
+            android:id="@+id/nav_manual"
+            android:icon="@drawable/ic_manual"
+            android:title="@string/menu_manual" />
+        <item
             android:id="@+id/nav_info"
             android:icon="@drawable/ic_info"
             android:title="@string/menu_info" />
